Collapsing in FAQ is now implemented in CSS instead of CSS, minor fixes in FAQ

--- a/polls/static/polls/sidebar.css
+++ b/polls/static/polls/sidebar.css
@@ -68,6 +68,16 @@ img.centered {
 .faq .panel-info > .panel-heading {
     cursor: pointer;
 }
+
+.faq input[type="radio"].radio-collapse {
+    display: none;
+}
+
+label.panel-heading {
+	display: block;
+    margin: 0;
+}
+
 .arrow-down {
     width: 0;
     height: 0;
